--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,9 @@ services:
     name: streamlit-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: streamlit run app.py
+    startCommand: streamlit run app.py --server.port $PORT --server.address 0.0.0.0
     envVars:
       - key: API_KEY
         sync: false
+    pythonVersion: 3.9
+
